# mailing

./: README.md  groups.json  pyproject.toml
config/: settings.py  urls.py
mailing_blog/: admin.py  apps.py  forms.py  services.py  urls.py  views.py
mailing_blog/migrations/: 0001_initial.py
mailing_blog/templates/mailing_blog/: blog_confirm_delete.html  blog_list.html
main/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
main/management/commands/: run_mailing.py
main/migrations/: 0001_initial.py  0002_alter_mailing_end_time.py  0003_alter_mailing_options.py  0004_alter_mailing_periodicity.py  0005_mailing_next_send_time.py  0006_mailing_is_active.py  0007_alter_mailing_status_alter_trytosend_client.py
main/templates/: base.html  home.html
main/templates/includes/: inc_menu.html
main/templates/main/: clientmessage_confirm_delete.html  clientmessage_detail.html  clientmessage_form.html  clientmessage_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_list.html  serviceclient_confirm_delete.html  serviceclient_detail.html  serviceclient_list.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py  cu.py  new_user.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_options_alter_user_is_active.py
users/templates/users/: login.html  recovery_form.html  register.html  user_detail.html  user_form.html  user_list.html
